--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -4,6 +4,10 @@
     .projects{
         grid-template-columns: repeat(4,1fr);
     }
+
+    .bio{
+        font-size: 2.5rem;
+    }
 }
 
 
@@ -74,7 +78,20 @@
 @include mediaSm{
     main#home h1{
         margin-top: 10vh;
+
     }
+
+    .lg-heading{
+        font-size: 0.5rem;
+    }
+    .boxes{
+        display: flex;
+        // justify-content: center;
+    }
+
+    .boxing-1, .boxing-3, .boxing-2{
+        font-size: 1rem;
+      }
 
     .projects{
         grid-template-columns: 1fr;
