--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     @include background;
     background: $primary-color;
@@ -23,10 +27,11 @@ h1,h2,h3{
     font-weight: 400;
     
     &.lg-heading{
-        font-size: 6rem;;
+        font-size: 4rem;;
     } 
     &.sm-heading{
-        margin-bottom: 2 rem;
+        margin-left: -10px;
+        margin-bottom: 2rem;
         padding: 0.2rem 1rem;
     }
 }
@@ -48,7 +53,7 @@ header{
 
 main{
     padding: 4rem;
-    min-height: calc(100vh - 60px);
+    min-height: calc(100vh - 50px);
 
     .icons{
         margin-top: 1rem;
@@ -141,19 +146,25 @@ main{
 .boxes{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
+    align-content: center;
     margin-top: 1rem;
 
+    .boxing-1, .boxing-3, .boxing-2{
+      font-size: 1.75rem;
+    }
+   
+
     div{
-        font-size: 2.3rem;
+        font-size: 1.8rem;
         border: 2px #fff solid;
-        padding: 1.4rem 2.5rem;
+        padding: 1.5rem 2rem;
         margin-bottom: 3rem;
         @include ease-in-0ut;
 
         &:hover{
-            padding: 0.5rem 1.5rem;
+            padding: 1.8rem;
             background: $secondary-color;
             color: set-text-color($secondary-color);
             span{
@@ -166,7 +177,7 @@ main{
 // Button Styles
 .btn{
    display: block;
-   padding: 0.5rem 1rem;
+   padding:1rem 1rem;
    border: 0;
    margin: 0.25rem;
    &:hover{
@@ -181,12 +192,17 @@ main{
     color: rgb(245, 241, 241);
 }
 
+
+// footer
 #main-footer{
     text-align: center;
     padding: 1.1rem;
     background: darken($primary-color,10);
     color: set-text-color($primary-color);
-    height: 60px;
+    height: 50px;
+}
+.centering{
+   text-align: left;
 }
 
 @import 'mobile';
