--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-html{
-    scroll-behavior: smooth;
-}
-
 body{
     @include background;
     background: $primary-color;
@@ -27,11 +23,10 @@ h1,h2,h3{
     font-weight: 400;
     
     &.lg-heading{
-        font-size: 4rem;;
+        font-size: 6rem;;
     } 
     &.sm-heading{
-        margin-left: -10px;
-        margin-bottom: 2rem;
+        margin-bottom: 2 rem;
         padding: 0.2rem 1rem;
     }
 }
@@ -53,7 +48,7 @@ header{
 
 main{
     padding: 4rem;
-    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 60px);
 
     .icons{
         margin-top: 1rem;
@@ -146,25 +141,19 @@ main{
 .boxes{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     justify-content: space-evenly;
-    align-content: center;
+    align-items: center;
     margin-top: 1rem;
 
-    .boxing-1, .boxing-3, .boxing-2{
-      font-size: 1.75rem;
-    }
-   
-
     div{
-        font-size: 1.8rem;
+        font-size: 2.3rem;
         border: 2px #fff solid;
-        padding: 1.5rem 2rem;
+        padding: 1.4rem 2.5rem;
         margin-bottom: 3rem;
         @include ease-in-0ut;
 
         &:hover{
-            padding: 1.8rem;
+            padding: 0.5rem 1.5rem;
             background: $secondary-color;
             color: set-text-color($secondary-color);
             span{
@@ -177,7 +166,7 @@ main{
 // Button Styles
 .btn{
    display: block;
-   padding:1rem 1rem;
+   padding: 0.5rem 1rem;
    border: 0;
    margin: 0.25rem;
    &:hover{
@@ -192,17 +181,12 @@ main{
     color: rgb(245, 241, 241);
 }
 
-
-// footer
 #main-footer{
     text-align: center;
     padding: 1.1rem;
     background: darken($primary-color,10);
     color: set-text-color($primary-color);
-    height: 50px;
-}
-.centering{
-   text-align: left;
+    height: 60px;
 }
 
 @import 'mobile';
