--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -35,21 +35,28 @@
         float: none;
         width: 100%;
         min-height: 0;
+    }
+    ul.menu-nav{
+        align-items: center;
 
-        &.show{
-            transform: translate3d(0,0,0);
-        }
+        // &.show{
+        //     // transform: translate3d(0,0,0);
+        // }
     }
 
     .menu-nav{
-        height: 75vh;
-        transform: translate3d(-100%,0,0);
-        font-size: 24px ;
+        height: 70vh;
+        // transform: translate3d(-100%,0,0);
+
+    }
+
+    .menu .nav-link{
+        font-size: 2rem;
     }
 
     .menu-branding{
-        height: 25vh;
-        transform: translate3d(100%,0,0);
+        height: 30vh;
+        // transform: translate3d(100%,0,0);
         
         .portrait{
             background: url('../img/portrait.jpg');
@@ -72,28 +79,53 @@
     .projects{
         grid-template-columns: repeat(2,1fr);
     }
+  
 }
 
 // Smartphones
 @include mediaSm{
     main#home h1{
-        margin-top: 10vh;
+        margin-top: 20vh;
 
     }
+    h1 span.name {
+        display: block;
+      }
+      h1 span::before {
+        content: attr(data-text);
+        background: none;
+      }
 
-    .lg-heading{
-        font-size: 0.5rem;
+    ul.menu.menu-nav{
+        margin: 0;
+        padding: 0;;
     }
-    .boxes{
-        display: flex;
-        // justify-content: center;
+      
+    h1.lg-heading{
+     display: block;
+     margin-top: 1rem;
     }
-
-    .boxing-1, .boxing-3, .boxing-2{
+    .boxes, .boxing-1, .boxing-3, .boxing-2{
         font-size: 1rem;
       }
 
     .projects{
         grid-template-columns: 1fr;
     }
+
+    // Headings
+h1,h2,h3{
+    margin: 0;
+    font-weight: 400;
+    
+    &.lg-heading{
+        font-size: 4rem;;
+    } 
+    &.sm-heading{
+        margin-left: -10px;
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+    }
+  
+}
 }
