--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -119,7 +119,7 @@ h1,h2,h3{
     font-weight: 400;
     
     &.lg-heading{
-        font-size: 4rem;;
+        font-size: 3rem;
     } 
     &.sm-heading{
         margin-left: -10px;
